fix: align project title in the center of its banner

--- a/src/assets/styles/collections/_projects.css
+++ b/src/assets/styles/collections/_projects.css
@@ -120,14 +120,16 @@
             inset 0 -0.1875rem 0 0 var(--fl-fgColor, transparent);
         flex-direction: row;
         height: 39.625rem;
-        margin-block-start: 0;
+        align-items: center;
+        margin-block-start: unset;
         padding-inline: 8.25rem 0;
         padding-block: 0;
+        position: relative;
     }
 
-    .project .banner .flow {
-        margin-block-start: 5.5rem;
-        width: auto;
+    .project .banner a {
+        position: absolute;
+        top: 5.5rem;
     }
 
     .project .banner .image {
